--- a/code/WebApp/WebApp/Components/Pages/Home.razor
+++ b/code/WebApp/WebApp/Components/Pages/Home.razor
@@ -16,15 +16,15 @@
 <table class="table table-hover">
     <thead>
         <tr>
-            <th>Symbol</th>
+            <th>Name</th>
             <th>Price</th>
         </tr>
     </thead>
     <tbody>
         @foreach (var priceEntry in priceEntries)
         {
-            <tr @onclick="(() => RedirectToCryptocurrency(priceEntry.Symbol))" style="cursor: pointer;" title="Klicken, um Details von @priceEntry.Symbol anzuzeigen">
-                <td>@priceEntry.Symbol</td>
+            <tr @onclick="(() => RedirectToCryptocurrency(priceEntry.Name))" style="cursor: pointer;" title="Klicken, um Details von @priceEntry.Name anzuzeigen">
+                <td>@priceEntry.Name</td>
                 <td>@priceEntry.Price</td>
             </tr>
         }
@@ -52,7 +52,7 @@
         {
             priceEntries.Add(new PriceEntry
                 {
-                    Symbol = entity.PartitionKey,
+                    Name = entity.PartitionKey,
                     Price = (decimal?)entity["Price"]
                 });
         }
@@ -65,20 +65,20 @@
             .WithUrl(Navigation.ToAbsoluteUri("/priceshub"))
             .Build();
 
-        hubConnection.On<string, decimal?>("ReceivePriceUpdate", async (symbol, price) =>
+        hubConnection.On<string, decimal?>("ReceivePriceUpdate", async (name, price) =>
         {
-            var existingEntry = priceEntries.FirstOrDefault(entry => entry.Symbol == symbol);
+            var existingEntry = priceEntries.FirstOrDefault(entry => entry.Name == name);
             if (existingEntry != null)
             {
                 existingEntry.Price = price; // Aktualisiere den Preis des vorhandenen Eintrags
-                if (symbol.Equals("BTC"))
+                if (name.Equals("Bitcoin"))
                 {
                     //await priceChart.UpdateChart(DateTime.Now, (decimal)price);
                 }
             }
             else
             {
-                priceEntries.Add(new PriceEntry { Symbol = symbol, Price = price }); // Füge einen neuen Eintrag hinzu, wenn das Symbol noch nicht vorhanden ist
+                priceEntries.Add(new PriceEntry { Name = name, Price = price }); // Füge einen neuen Eintrag hinzu, wenn das Name noch nicht vorhanden ist
             }
             InvokeAsync(StateHasChanged);
         });
@@ -98,8 +98,8 @@
     }
 
 
-    private void RedirectToCryptocurrency(string symbol)
+    private void RedirectToCryptocurrency(string name)
     {
-        Navigation.NavigateTo($"cryptocurrencies/{symbol}");
+        Navigation.NavigateTo($"cryptocurrencies/{name}");
     }
 }
